--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,28 @@ body {
 	color: red;
 }
 
+.location-info {
+	position: absolute;
+	top: 50px;
+	right: 50px;
+	width: 400px;
+	min-height: 200px;
+	padding: 20px;
+	background-color: rgba(0,0,0,0.6);
+	border-radius: 10px;
+	font-size: 18px;
+	color: #fff;
+}
+
+.location-info ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+.location-info li {
+	padding: 5px 0;
+}
+
 .loader {
 	display: flex;
 	flex-direction: column;
